# EduMPI_GUI

./: .gitignore  .qmlls.ini  Application_Start_OpenMP.qml  Application_Start_Scorep.qml  Application_Start_without.qml  Bash_Skript_Manual.qml  Bottom_Bar.qml  CMakeCache.txt  CMakeLists.txt  Cluster_Connection_Formular.qml  Cores2D.qml  Cores3D.qml  Cores3D.qml.autosave  CoresCommunicationMatrix.qml  DB_Connection_Formular.qml  Detailed_Information_Bar.qml  EduMPI_GUI.desktop  Key_Gen_Guide.qml  Loading.qml  MPI_Application_Start.qml  MPI_Run_Analysis.qml  Makefile  Menu_Bar.qml  Menu_Bar_copy.qml  Options_Bar.qml  README.md  Sidebar.qml  Style.qml  Table_Userid_Selection.qml  appGUI_Cluster  bash_process_manager.cpp  bash_process_manager.h  cluster_architecture.cpp  cluster_architecture.h  cluster_core.cpp  cluster_core.h  cluster_node.cpp  cluster_node.h  cluster_rank.cpp  cluster_rank.h  (+38 more)
.github/workflows/: appimage-deployment.yaml  linux_appimage.yaml  macos-deployment.yaml  windows-deployment.yaml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qt/deploy_qml_imports/: appGUI_Cluster.cmake
.qt/qml_imports/: appGUI_Cluster_build.rsp  appGUI_Cluster_conf.cmake  appGUI_Cluster_conf.rsp
.qt_plugins/: Qt6_QmlPlugins_Imports_appGUI_Cluster.rsp
.rcc/qmlcache/: all_aotstats.aotstatslist  appGUI_Cluster_qml_loader_file_list.rsp  module_appGUI_Cluster.aotstatslist
.rcc/qmllint/: appGUI_Cluster.rsp  appGUI_Cluster_json.rsp  appGUI_Cluster_module.rsp
3D-Scene/: Lights.qml  Menu_Bar.qml  lights.qml
GUI_Cluster/: Application_Start_OpenMP.qml  Application_Start_without.qml  Bottom_Bar.qml  Cores2D.qml  Cores3D.qml  Key_Gen_Guide.qml  MPI_Run_Analysis.qml  Menu_Bar.qml  Output_File.qml  Table_Userid_Selection.qml  appGUI_Cluster.qmltypes  appGUI_Cluster_qml_module_dir_map.qrc  main.qml
Sidebar/: .qmlls.ini  CMakeLists.txt  MPI_Application_Start.qml  Makefile  Options.qml  Options_Bar.qml  Options_Views.qml  Screenshot.qml  Sidebar.qml  Sidebar_Run_Analysis.qml  cmake_install.cmake  qmldir  sidebar_qml_module_dir_map.qrc
Sidebar/.rcc/qmlcache/: module_sidebar.aotstatslist  sidebar_qml_loader_file_list.rsp
Sidebar/.rcc/qmllint/: sidebar.rsp  sidebar_json.rsp  sidebar_module.rsp
appImage_Build_Dir/: Makefile  cmake_install.cmake  resources.qrc.depends
appImage_Build_Dir/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
appImage_Build_Dir/.qt/deploy_qml_imports/: appGUI_Cluster.cmake
appImage_Build_Dir/.qt/qml_imports/: appGUI_Cluster_build.rsp  appGUI_Cluster_conf.cmake  appGUI_Cluster_conf.rsp
appImage_Build_Dir/.qt/rcc/: appGUI_Cluster_raw_qml_0.qrc  qmake_GUI_Cluster.qrc
appImage_Build_Dir/.rcc/qmlcache/: all_aotstats.aotstatslist  appGUI_Cluster_qml_loader_file_list.rsp  module_appGUI_Cluster.aotstatslist
appImage_Build_Dir/GUI_Cluster/: Bottom_Bar.qml  Cores2D.qml  MPI_Run_Analysis.qml  Table_Userid_Selection.qml  appGUI_Cluster_qml_module_dir_map.qrc  main.qml  qmldir
appImage_Build_Dir/Sidebar/: Makefile  sidebarplugin_SidebarPlugin_in.cpp
appImage_Build_Dir/qmltypes/: appGUI_Cluster_foreign_types.txt
bash_files/: local_bash_skript.sh  local_bash_skript_scorep.sh  remote_scorep_skript.sh
config.tests/static_link_order/: CMakeCache.txt  Makefile  cmake_install.cmake
deploy_1.0.4/: Makefile  appgui_cluster_qmltyperegistrations.cpp  cmake_install.cmake  qrc_resources.cpp
deploy_1.0.4/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
deploy_1.0.4/AppDir/: AppRun
deploy_1.0.4/GUI_Cluster/: Application_Start_Scorep.qml  Menu_Bar.qml  Output_File.qml  appGUI_Cluster.qmltypes  appGUI_Cluster_qml_module_dir_map.qrc
deploy_1.0.4/Sidebar/: Makefile  cmake_install.cmake  sidebar_qmltyperegistrations.cpp  sidebarplugin_init.cpp
deploy_1.0.4/appGUI_Cluster_autogen/: deps  moc_predefs.h
deploy_1.0.4/meta_types/: appGUI_Cluster_json_file_list.txt  appGUI_Cluster_json_file_list.txt.timestamp  qt6appgui_cluster_debug_metatypes.json.gen
deploy_1.0.4/qmltypes/: appGUI_Cluster_foreign_types.txt
deploy_test/: Makefile  cmake_install.cmake  qrc_resources.cpp
deploy_test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
deploy_test/Sidebar/: Makefile  cmake_install.cmake  sidebarplugin_SidebarPlugin.cpp
deploy_test/appGUI_Cluster_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
deploy_test/meta_types/: appGUI_Cluster_json_file_list.txt  appGUI_Cluster_json_file_list.txt.timestamp  qt6appgui_cluster_metatypes.json.gen
deploy_test/qmltypes/: appGUI_Cluster_foreign_types.txt
meta_types/: appGUI_Cluster_json_file_list.txt  appGUI_Cluster_json_file_list.txt.timestamp
qmltypes/: appGUI_Cluster_foreign_types.txt
shaders/: glass.frag  heatmap.frag  heatmap.frag.qsb  heatmap.vert  heatmap.vert.qsb  simple.vert
test/: CMakeCache.txt  Makefile  appGUI_Cluster  cmake_install.cmake  install_manifest.txt  log.txt  qrc_resources.cpp
test/.qt/: QtDeploySupport.cmake
test/.qt_plugins/: Qt6_QmlPlugins_Imports_appGUI_Cluster.cmake  Qt6_QmlPlugins_Imports_appGUI_Cluster.rsp
test/.rcc/: qmake_GUI_Cluster.qrc  qrc_appGUI_Cluster_raw_qml_0.cpp  qrc_qmake_GUI_Cluster.cpp
test/AppDirQT/: AppRun
test/GUI_Cluster/: Cores3D.qml  MPI_Application_Start.qml  Menu_Bar.qml  appGUI_Cluster.qmltypes  appGUI_Cluster_qml_module_dir_map.qrc  qmldir
test/meta_types/: appGUI_Cluster_json_file_list.txt  appGUI_Cluster_json_file_list.txt.timestamp  qt6appgui_cluster_metatypes.json
testdeploy/: CMakeCache.txt  Dependencies_GTK3  Makefile  appGUI_Cluster  cmake_install.cmake  copy_dependencys.sh  logdatei.txt
testdeploy/.qt/: QtDeploySupport.cmake
testdeploy/.qt_plugins/: Qt6_QmlPlugins_Imports_appGUI_Cluster.cmake  Qt6_QmlPlugins_Imports_appGUI_Cluster.rsp
testdeploy/.rcc/: qmake_GUI_Cluster.qrc  qrc_qmake_GUI_Cluster.cpp
testdeploy/AppDir/: AppRun  AppRun.wrapped  GUI_Cluster.desktop
testdeploy/GUI_Cluster/: DB_Connection_Formular.qml  Options.qml  appGUI_Cluster_qml_module_dir_map.qrc
testdeploy/appGUI_Cluster_autogen/: moc_predefs.h
testdeploy/meta_types/: appGUI_Cluster_json_file_list.txt  appGUI_Cluster_json_file_list.txt.timestamp
(+629 files in other folders)
